updating api version, layout params

--- a/BizLicenser/res/layout/biz_selector.xml
+++ b/BizLicenser/res/layout/biz_selector.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="match_parent" android:layout_height="match_parent">
-	<TableLayout android:layout_width="match_parent"
-		android:layout_height="match_parent">
+	android:layout_width="fill_parent" android:layout_height="wrap_content">
+	<TableLayout android:layout_width="fill_parent"
+		android:layout_height="wrap_content">
 		<TableRow>
 			<TextView android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:text="@string/bizlistLabel"
@@ -10,7 +10,7 @@
 		</TableRow>
 		<TableRow>
 			<Spinner android:layout_height="wrap_content"
-				android:layout_width="match_parent" android:layout_weight="1"
+				android:layout_width="wrap_content" android:layout_weight="1"
 				android:id="@+id/bizlist" />
 		</TableRow>
 		<TableRow>
@@ -26,7 +26,7 @@
 
 		<TableRow>
 			<Button android:layout_height="wrap_content" android:text="@string/searchlabel"
-				android:id="@+id/searchlicenses" android:layout_width="match_parent"
+				android:id="@+id/searchlicenses" android:layout_width="wrap_content"
 				android:layout_weight="1" />
 		</TableRow>
 
